# acemcp

./: .gitignore  README.md  README_EN.md  pyproject.toml
src/acemcp/: server.py
src/acemcp/web/: app.py
src/acemcp/web/templates/: index.html
